nginx-example/factorio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorio
  template:
    metadata:
      labels:
        app: factorio
    spec:
      containers:
      - name: factorio
        image: factoriotools/factorio
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: factorio
spec:
  selector:
    app: factorio
  ports:
    - protocol: UDP
      name: port2
      port: 34197
      targetPort: 34197
  type: LoadBalancer
