nginx-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /jhunu
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
